--- a/React/src/styleMenu/Login.module.css
+++ b/React/src/styleMenu/Login.module.css
@@ -138,3 +138,11 @@ hr {
     padding: 0 15px;
     color: #9CA3AF;
 }
+
+
+@media only screen and (max-width: 768px) {
+    .form_container {
+        width: 300px;
+    }
+}
+
