--- a/React/src/styleMenu/Register.module.css
+++ b/React/src/styleMenu/Register.module.css
@@ -176,3 +176,10 @@ label:before {
 #passwordInput {
     margin-bottom: 15px;
 }
+
+@media only screen and (max-width: 768px) {
+    .form_container {
+        width: 300px;
+    }
+}
+
